Fix desktop position and overflow issue with icons outside of the background

--- a/symfony/assets/styles/scss/components/_sharing_cta.scss
+++ b/symfony/assets/styles/scss/components/_sharing_cta.scss
@@ -3,6 +3,9 @@
 	&:checked ~ .cta {
 		height: 160px;
 		bottom: 115px;
+		@include media-breakpoint-up(xxl) {
+			bottom: 240px;
+		}
 		// Background will rise
 		.cta__background {
 			height: 100%;
@@ -37,6 +40,7 @@
 	position: fixed;
 	right: 25px;
 	bottom: 25px;
+	z-index: 50;
 	@include media-breakpoint-up(xxl) {
 		bottom: 150px;
 		right: calc((100vw - 1320px) / 1.75);
@@ -68,7 +72,7 @@
 			margin: 5px 10px;
 			height: 20px;
 			width: 20px;
-			transition: top .5s ease-in;
+			transition: all .3s;
 			&:nth-child(1) {
 				top: -15%;
 			}
